# sqlite-viewer

./: Cargo.toml  README.md  build.rs
src/: main.rs  worker.rs
ui/: window.slint
