cargo-features = ["edition2024"]

[package]
name = "sqlite-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.5.1", features = ["backend-winit"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["rt", "sync", "macros"] }
rfd = "0.14"
futures = "0.3"

[build-dependencies]
slint-build = "1.5"

[profile.release]
lto = true
strip = true
